# bill_of_materials

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: codacy.yml  lint.yml  test.yml
app/: informer.py  parser.py  utils.py
app/models/: __init__.py  dependency.py
examples/: pom.xml  pubspec.yml  requirements.txt
tests/: parser_test.py
